dev: Fixing more alignment issues with the profile card

--- a/ui-web-service/src/components/ProfileCard/ProfileCard.scss
+++ b/ui-web-service/src/components/ProfileCard/ProfileCard.scss
@@ -24,19 +24,20 @@
   box-shadow: -3px 4px 14px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
   width: 100%;
-  max-height: 15vh;
+  padding: 20px;
   overflow: hidden;
 
   .mainSection {
-    flex: 2;
     display: flex;
     max-height: 70%;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-bottom: 20px;
+    justify-content: space-between;
 
     .profilePictureSection {
       flex: 1;
+      max-width: 80px;
       content: '';
+      height: 80px;
       box-sizing: border-box;
       display: inline-block;
       justify-content: center;
@@ -44,14 +45,17 @@
       clip-path: circle(40px at center);
       background-repeat: no-repeat;
       background-position: center center;
-      background-size: contain;
+      background-size: cover;
       background-image: url("http://www.footyandsweep-dev.com:3000/profile.jpg");
     }
 
     .metadataSection {
       flex: 2;
-      display: flex;
       place-items: center;
+      justify-content: space-between;
+      width: fit-content;
+      height: fit-content;
+      padding: 16px;
 
       .usernameSection {
         float: left;
@@ -99,7 +103,6 @@
       }
 
       .balanceSection {
-        flex: 1;
         display: flow-root;
         text-align: center;
 
@@ -129,8 +132,6 @@
     flex: 1;
     display: flex;
     justify-content: left;
-    padding-left: 25px;
-    padding-top: 25px;
 
     .innerSection {
       display: flex;
