--- a/ui-web-service/src/pages/Sweepstake/Sweepstakes.scss
+++ b/ui-web-service/src/pages/Sweepstake/Sweepstakes.scss
@@ -183,7 +183,6 @@
 
         .profileCard {
           width: 100%;
-          flex: 0.5;
           display: flex;
         }
       }
